web-infras/parser/tests/fixtures/babel/core/uncategorised/469/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,37)
1|function hello() {'use strict'; var arguments = 10; }
 |                                   ^
